# twg-2025-1

./: .gitignore  Cargo.toml  README.md  gdd.md
assets/: build.wgsl  cargo.glb  crusher.glb  enrichment.glb  furnace.glb  generator.glb  hook.glb  hook_base.glb  hook_head.glb  procedural.wgsl  rock.wgsl  rock_0.glb  rock_1.glb  room.glb  room_floor.wgsl  stars.wgsl  stars_main_menu.wgsl
src/: background.rs  components.rs  game.rs  main.rs  material_modifier.rs  mipmaps.rs  modify_material.rs  procedural_material.rs  room.rs  scenes.rs
src/components/: background.rs  clicked_event.rs  collisions.rs  game_button.rs  music_player.rs  procedural_material.rs  update_material_textures.rs
src/game/: camera.rs  game_cursor.rs  map_state.rs  primary_block.rs  rock.rs  room.rs
src/scenes/: game.rs  main_menu.rs
src/scenes/game/: build_material.rs  builder.rs  camera.rs  cargo.rs  crusher.rs  enrichment.rs  furnace.rs  game_cursor.rs  generator.rs  hook.rs  map_state.rs  player.rs  primary_block.rs  rock.rs  room.rs  ui.rs
src/scenes/game/ui/: cargo_count.rs  container.rs  container_item.rs  header.rs  palette.rs  power_bar.rs
src/scenes/main_menu/: about.rs  settings.rs
