[package]
name = "twg-2025-1"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["bevy_dev_tools"] }
bevy-inspector-egui = "0.28.1"
bevy_rapier2d = { version = "0.28.0", features = ["debug-render-2d"] }
noisy_bevy = { git = "https://github.com/kirillsurkov/noisy_bevy", branch = "normalization" }
rand = "0.9.0"
rand_distr = "0.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
